ecmascript/parser/tests/jsx/errors/nested-fragment-unclosed/input.js.stderr
error: Unexpected token
 --> $DIR/tests/jsx/errors/nested-fragment-unclosed/input.js:1:4
  |
1 | <><></>
  |    ^

